--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mine Server</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        .content { border: 1px solid #ccc; padding: 15px; border-radius: 5px; }
+    </style>
+</head>
+<body>
+    <div class="content" id="content"></div>
+
+    <script>
+        const url = 'https://raw.githubusercontent.com/SayesCode/Mine-Server/refs/heads/main/README.md';
+
+        fetch(url)
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('content').innerHTML = marked(data);
+            })
+            .catch(error => {
+                console.error('Error loading the file:', error);
+                document.getElementById('content').innerHTML = '<p>Error loading content.</p>';
+            });
+    </script>
+</body>
+</html>
 
