--- a/index.html
+++ b/index.html
@@ -6,16 +6,74 @@
     <title>Mine Server - Page</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .content { border: 1px solid #ccc; padding: 15px; border-radius: 5px; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        .content {
+            border: 1px solid #ccc;
+            padding: 15px;
+            border-radius: 5px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .copy-box {
+            border: 1px solid #007BFF;
+            padding: 10px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            background-color: #e7f1ff;
+        }
+        .copy-button {
+            margin-left: 10px;
+            padding: 8px 12px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007BFF;
+            color: white;
+            cursor: pointer;
+        }
+        .copy-button:hover {
+            background-color: #0056b3;
+        }
+        .banner {
+            max-width: 100%;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
+    <div class="copy-box">
+        <span id="server-url">Servidor: <a id="server-link" href="#"></a>:25565</span>
+        <button class="copy-button" id="copy-button">Copiar</button>
+    </div>
+    <img id="banner" class="banner" src="" alt="Banner do Servidor" />
     <div class="content" id="content"></div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const url = 'https://raw.githubusercontent.com/SayesCode/Mine-Server/refs/heads/main/README.md';
+            const serverUrl = window.location.origin;
+            document.getElementById('server-link').innerText = serverUrl;
+            document.getElementById('server-link').href = serverUrl;
+
+            // Requisição para obter o banner do servidor
+            fetch('/server-banner')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.banner) {
+                        document.getElementById('banner').src = data.banner.replace(/&amp;/g, '&'); // Corrigindo o formato
+                    }
+                })
+                .catch(error => {
+                    console.error('Erro ao obter o banner:', error);
+                });
 
             fetch(url)
                 .then(response => {
@@ -32,6 +90,15 @@
                     console.error('Error loading the file:', error);
                     document.getElementById('content').innerHTML = '<p>Error loading content.</p>';
                 });
+
+            document.getElementById('copy-button').addEventListener('click', function() {
+                const fullServerUrl = serverUrl + ':25565';
+                navigator.clipboard.writeText(fullServerUrl).then(() => {
+                    alert('URL copiada: ' + fullServerUrl);
+                }).catch(err => {
+                    console.error('Erro ao copiar: ', err);
+                });
+            });
         });
     </script>
 </body>
